fix alignment

--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   width: auto;
-  padding-bottom: 19px;
   font-size: 14px;
   color: $select-color;
 
